# varg

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: black.yml  coveralls.yml  docker_build_n_publish.yml
tests/: conftest.py
tests/fixtures/: truth_set.vcf.gz.tbi
tests/utils/: test_compare.py  test_vcf_handler.py  test_write_report.py
varg/: __init__.py  __main__.py
varg/cli/: compare.py  root.py
varg/resources/: __init__.py  compare_fields.py
varg/utils/: compare.py  compare_mixin.py  vcf_handler.py  write_report.py
